[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/Items and HUD.png" type="Texture" id=1]
[ext_resource path="res://items/DropItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://items/Crystal.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 112, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="Crystal" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DropItem" parent="." instance=ExtResource( 2 )]
autostartTtl = false

[node name="RigidBody2D" parent="DropItem" index="0"]
mode = 1

[node name="Sprite" parent="DropItem/RigidBody2D" index="1"]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="DropItem/RigidBody2D" index="3"]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="TimeToLive" parent="DropItem" index="1"]
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pickup" from="DropItem" to="." method="_on_DropItem_pickup"]

[editable path="DropItem"]
